--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<script>
+  const path = window.location.pathname.slice(1);
+  localStorage.setItem('path', path);
+  window.location = '/';
+</script>
 <!doctype html>
 <html lang="en">
 <head>
